# Luminox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  accel.h  camera.h  hit.h  image.h  integrator.h  light.h  main.cpp  makefile  material.h  primitive.h  ray.h  sampler.h  scene.h  shape.h  texture.h  util.h  vec3.h
src/: camera.h  image.h  main.cpp  sampler.h  scene.h  shape.h
